# serializer version: 1
# name: test_help_snapshot[bpd completion]
  '''
  Usage: bpd completion [OPTIONS] {bash|zsh|fish}
  
    Print a shell completion script.
  
    Examples:     bpd completion bash >> ~/.bashrc     eval "$(bpd completion
    zsh)"
  
  Options:
    -h, --help  Show this message and exit.
  
  '''
# ---
# name: test_help_snapshot[bpd config get]
  '''
  Usage: bpd config get [OPTIONS] {logging.file|logging.file_level|logging.format|
                        logging.level|output.color|output.format|token}
  
    Show a resolved config value and where it came from.
  
    The token is masked and resolves from flag/env only. Examples:     bpd config
    get output.color     bpd config get logging.level --json     bpd config get
    token
  
  Options:
    -o, --output [text|json|markdown]
                                    Output format. [default: text]
    --json                          Shorthand for --output json.
    --output-file FILE              Write results to a file instead of stdout
                                    (format set by --output).
    -v, --verbose                   Increase log verbosity (-vv for debug).
    -q, --quiet                     Suppress non-essential stderr output.
    --log-level [debug|info|warning|error|critical]
                                    Explicit console log level (overrides -v/-q).
    --log-file TEXT                 Enable rotating file logging (PATH optional;
                                    default: XDG state).
    --no-color                      Disable colored output.
    --config FILE                   Path to a TOML config file (overrides layered
                                    discovery).
    --token TEXT                    Py Personal Access Token (overrides
                                    $BPD_TOKEN). Never stored.
    --no-input                      Never prompt; fail instead (for scripts/CI).
    -h, --help                      Show this message and exit.
  
  '''
# ---
# name: test_help_snapshot[bpd config init]
  '''
  Usage: bpd config init [OPTIONS]
  
    Create or update the config file with guided prompts.
  
    Asks (on stderr, so stdout stays pipe-safe) for the most common settings,
    offering the currently resolved values as defaults, then writes them to the
    TOML config file. Secrets are never written — the token stays in --token /
    $BPD_TOKEN. Examples:
  
        bpd config init     bpd config init --yes       # accept current values,
        no prompts     bpd config init --dry-run   # preview, write nothing
  
  Options:
    --dry-run                       Show what would change; write nothing.
    -y, --yes                       Skip confirmation prompts (for scripts/CI).
    -o, --output [text|json|markdown]
                                    Output format. [default: text]
    --json                          Shorthand for --output json.
    --output-file FILE              Write results to a file instead of stdout
                                    (format set by --output).
    -v, --verbose                   Increase log verbosity (-vv for debug).
    -q, --quiet                     Suppress non-essential stderr output.
    --log-level [debug|info|warning|error|critical]
                                    Explicit console log level (overrides -v/-q).
    --log-file TEXT                 Enable rotating file logging (PATH optional;
                                    default: XDG state).
    --no-color                      Disable colored output.
    --config FILE                   Path to a TOML config file (overrides layered
                                    discovery).
    --token TEXT                    Py Personal Access Token (overrides
                                    $BPD_TOKEN). Never stored.
    --no-input                      Never prompt; fail instead (for scripts/CI).
    -h, --help                      Show this message and exit.
  
  '''
# ---
# name: test_help_snapshot[bpd config path]
  '''
  Usage: bpd config path [OPTIONS]
  
    Show the config file path and whether it exists.
  
    Examples:     bpd config path     bpd config path --json
  
  Options:
    -o, --output [text|json|markdown]
                                    Output format. [default: text]
    --json                          Shorthand for --output json.
    --output-file FILE              Write results to a file instead of stdout
                                    (format set by --output).
    -v, --verbose                   Increase log verbosity (-vv for debug).
    -q, --quiet                     Suppress non-essential stderr output.
    --log-level [debug|info|warning|error|critical]
                                    Explicit console log level (overrides -v/-q).
    --log-file TEXT                 Enable rotating file logging (PATH optional;
                                    default: XDG state).
    --no-color                      Disable colored output.
    --config FILE                   Path to a TOML config file (overrides layered
                                    discovery).
    --token TEXT                    Py Personal Access Token (overrides
                                    $BPD_TOKEN). Never stored.
    --no-input                      Never prompt; fail instead (for scripts/CI).
    -h, --help                      Show this message and exit.
  
  '''
# ---
# name: test_help_snapshot[bpd config set]
  '''
  Usage: bpd config set [OPTIONS] {logging.file|logging.file_level|logging.format|
                        logging.level|output.color|output.format} VALUE
  
    Write a non-secret config value to the TOML config file.
  
    KEY is a dotted path into the config tables. Examples:     bpd config set
    output.color always     bpd config set logging.level info     bpd config set
    logging.file_level debug --yes
  
    Secrets are never stored here — supply the token via --token or $BPD_TOKEN.
    Prompts before overwriting an existing value unless --yes.
  
  Options:
    --dry-run                       Show what would change; write nothing.
    -y, --yes                       Skip confirmation prompts (for scripts/CI).
    -o, --output [text|json|markdown]
                                    Output format. [default: text]
    --json                          Shorthand for --output json.
    --output-file FILE              Write results to a file instead of stdout
                                    (format set by --output).
    -v, --verbose                   Increase log verbosity (-vv for debug).
    -q, --quiet                     Suppress non-essential stderr output.
    --log-level [debug|info|warning|error|critical]
                                    Explicit console log level (overrides -v/-q).
    --log-file TEXT                 Enable rotating file logging (PATH optional;
                                    default: XDG state).
    --no-color                      Disable colored output.
    --config FILE                   Path to a TOML config file (overrides layered
                                    discovery).
    --token TEXT                    Py Personal Access Token (overrides
                                    $BPD_TOKEN). Never stored.
    --no-input                      Never prompt; fail instead (for scripts/CI).
    -h, --help                      Show this message and exit.
  
  '''
# ---
# name: test_help_snapshot[bpd config]
  '''
  Usage: bpd config [OPTIONS] COMMAND [ARGS]...
  
    Inspect and edit CLI configuration.
  
  Options:
    -h, --help  Show this message and exit.
  
  Commands:
    get   Show a resolved config value and where it came from.
    init  Create or update the config file with guided prompts.
    path  Show the config file path and whether it exists.
    set   Write a non-secret config value to the TOML config file.
  
  '''
# ---
# name: test_help_snapshot[bpd doctor]
  '''
  Usage: bpd doctor [OPTIONS]
  
    Diagnose configuration and environment.
  
    Reports Python/platform, the resolved config file, and token status. Exits
    non-zero if any check is an error (useful in CI). Honors -o/--json. --bundle
    widens the report into a redacted snapshot (version, settings, app env vars
    with secrets masked) safe to paste into a public issue.
  
  Options:
    --bundle                        Emit a redacted diagnostics bundle to attach
                                    to bug reports.
    -o, --output [text|json|markdown]
                                    Output format. [default: text]
    --json                          Shorthand for --output json.
    --output-file FILE              Write results to a file instead of stdout
                                    (format set by --output).
    -v, --verbose                   Increase log verbosity (-vv for debug).
    -q, --quiet                     Suppress non-essential stderr output.
    --log-level [debug|info|warning|error|critical]
                                    Explicit console log level (overrides -v/-q).
    --log-file TEXT                 Enable rotating file logging (PATH optional;
                                    default: XDG state).
    --no-color                      Disable colored output.
    --config FILE                   Path to a TOML config file (overrides layered
                                    discovery).
    --token TEXT                    Py Personal Access Token (overrides
                                    $BPD_TOKEN). Never stored.
    --no-input                      Never prompt; fail instead (for scripts/CI).
    -h, --help                      Show this message and exit.
  
  '''
# ---
# name: test_help_snapshot[bpd projects get]
  '''
  Usage: bpd projects get [OPTIONS] PROJECT_ID
  
    Fetch a single project by its ID.
  
    Examples:     bpd projects get 12345     bpd projects get 12345 --json
  
  Options:
    -o, --output [text|json|markdown]
                                    Output format. [default: text]
    --json                          Shorthand for --output json.
    --output-file FILE              Write results to a file instead of stdout
                                    (format set by --output).
    -v, --verbose                   Increase log verbosity (-vv for debug).
    -q, --quiet                     Suppress non-essential stderr output.
    --log-level [debug|info|warning|error|critical]
                                    Explicit console log level (overrides -v/-q).
    --log-file TEXT                 Enable rotating file logging (PATH optional;
                                    default: XDG state).
    --no-color                      Disable colored output.
    --config FILE                   Path to a TOML config file (overrides layered
                                    discovery).
    --token TEXT                    Py Personal Access Token (overrides
                                    $BPD_TOKEN). Never stored.
    --no-input                      Never prompt; fail instead (for scripts/CI).
    -h, --help                      Show this message and exit.
  
  '''
# ---
# name: test_help_snapshot[bpd projects list]
  '''
  Usage: bpd projects list [OPTIONS]
  
    List projects, optionally filtered by workspace.
  
    Examples:     bpd projects list     bpd projects list --workspace "My
    Workspace" --json     bpd projects list -o markdown
  
  Options:
    --workspace TEXT                Filter projects by workspace name.
    --limit INTEGER RANGE           Maximum number of projects to retrieve.
                                    [default: 200; x>=1]
    -o, --output [text|json|markdown]
                                    Output format. [default: text]
    --json                          Shorthand for --output json.
    --output-file FILE              Write results to a file instead of stdout
                                    (format set by --output).
    -v, --verbose                   Increase log verbosity (-vv for debug).
    -q, --quiet                     Suppress non-essential stderr output.
    --log-level [debug|info|warning|error|critical]
                                    Explicit console log level (overrides -v/-q).
    --log-file TEXT                 Enable rotating file logging (PATH optional;
                                    default: XDG state).
    --no-color                      Disable colored output.
    --config FILE                   Path to a TOML config file (overrides layered
                                    discovery).
    --token TEXT                    Py Personal Access Token (overrides
                                    $BPD_TOKEN). Never stored.
    --no-input                      Never prompt; fail instead (for scripts/CI).
    -h, --help                      Show this message and exit.
  
  '''
# ---
# name: test_help_snapshot[bpd projects]
  '''
  Usage: bpd projects [OPTIONS] COMMAND [ARGS]...
  
    List and inspect Py projects.
  
  Options:
    -h, --help  Show this message and exit.
  
  Commands:
    get   Fetch a single project by its ID.
    list  List projects, optionally filtered by workspace.
  
  '''
# ---
# name: test_help_snapshot[bpd]
  '''
  Usage: bpd [OPTIONS] COMMAND [ARGS]...
  
    bpd — a gh-style CLI for Py.
  
    Commands follow a noun-verb shape, e.g. `bpd projects list`. Every command
    supports -o/--output {text,json,markdown}, --json, -v/--verbose, --no-color,
    and --config. Results go to stdout; logs and errors go to stderr.
  
  Options:
    -V, --version  Show version, Python, and platform, then exit.
    -h, --help     Show this message and exit.
  
  Commands:
    completion  Print a shell completion script.
    config      Inspect and edit CLI configuration.
    doctor      Diagnose configuration and environment.
    projects    List and inspect Py projects.
  
  '''
# ---
